# acme-package-registry

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  coverage.json  endpoint-plan.md  example_urls.txt  lambda_handlers.py  openapi_spec.yaml  package.json  payload.json  playwright.config.js  pyproject.toml  requirements.txt  run  run.cmd  samconfig.toml  template.yaml  test_api.py  test_lambda_local.py
docs/: git_branch_instructions.md  logging_smoke_test.md
front-end/: dev-styles.css  dev.html  index.html  login-scripts.js  login-styles.css  login.html  scripts.js  styles.css
health-dashboard/: index.html  styles.css
lambda_handlers/: __init__.py  artifact_cost.py  artifact_lineage.py  auth_login.py  auth_logout.py  auth_register.py  create_artifact.py  delete_artifact.py  download.py  get_artifact_by_id.py  get_artifact_by_name.py  get_artifact_cost.py  get_artifacts_by_regex.py  health_check.py  health_check_live.py  license_check.py  list_artifacts.py  list_artifacts_detailed.py  package_confusion_audit.py  rate_artifact.py  reset_registry.py  search_artifacts.py  tracks.py  update_artifact.py  utils.py
scripts/: logging_smoke_test.py
src/: LLM_endpoint.py  artifact_store.py  artifact_utils.py  dataset_code_avail.py  dataset_quality.py  github_license.py  hf_api.py  license.py  license_compatibility.py  logging_config.py  models.py  net_score.py  orchestrator.py  ramp_up.py  s3_user_repository.py  user_management.py
tests/: conftest.py  test_artifact_lineage.py  test_auth_register.py  test_auth_service.py  test_bus_factor.py  test_hf_api.py  (+24 more)
(+38 files in other folders)
